--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eighty App</title>
-  </head>
-  <body>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eighty App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <script type="module" src="/main.js"></script>
+  <div id="loading">
+    <img src="./images/loading.png" alt="Loading" width="128px">
+    <p>Loading...</p>
+  </div>
+</body>
+
 </html>
